--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,191 +1,197 @@
 .content {
-  height: auto !important;
-  overflow-x: hidden;
+    height: auto !important;
+    overflow-x: hidden;
 }
 
 .fa-spin {
-  -webkit-animation: fa-spin 2s infinite linear;
-  animation: fa-spin 2s infinite linear;
+    -webkit-animation: fa-spin 2s infinite linear;
+    animation: fa-spin 2s infinite linear;
 }
 
 .commentthread_subscribe_ctn {
-  position: relative;
-  display: block;
-  margin-top: 5px;
-  margin-left: 5px;
-  margin-bottom: 5px;
+    position: relative;
+    display: block;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-bottom: 5px;
 }
 
 .rightimages {
-  height: 80px;
+    height: 80px;
 }
 
 .hidden {
-  display: none;
+    display: none;
 }
 
 .customize_textbox {
-  position: relative;
-  display: block;
-  margin-left: 5px;
+    position: relative;
+    display: block;
+    margin-left: 5px;
 }
 
 .btn_green_white_innerfade {
-  border-radius: 2px;
-  border: none;
-  padding: 1px;
-  display: inline-block;
-  cursor: pointer;
-  text-decoration: none !important;
-  color: #D2E885 !important;
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a4d007', endColorstr='#536904', GradientType=0);
+    border-radius: 2px;
+    border: none;
+    padding: 1px;
+    display: inline-block;
+    cursor: pointer;
+    text-decoration: none !important;
+    color: #D2E885 !important;
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#a4d007', endColorstr='#536904', GradientType=0);
 }
 
 .btn_green_white_innerfade>span {
-  border-radius: 2px;
-  display: block;
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#799905', endColorstr='#536904', GradientType=0);
+    border-radius: 2px;
+    display: block;
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#799905', endColorstr='#536904', GradientType=0);
 }
 
-
 .newmodal_background {
-  position: fixed;
-  z-index: 900;
-  background: #000000;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+    position: fixed;
+    z-index: 900;
+    background: #000000;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .market_listing_row {
-  overflow: hidden;
-  clear: left;
-  position: relative;
-  background-color: rgba(0, 0, 0, 0.2);
-  border: 1px solid rgba(0, 0, 0, 0);
-  margin-top: 10px;
-  white-space: nowrap;
+    overflow: hidden;
+    clear: left;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(0, 0, 0, 0);
+    margin-top: 10px;
+    white-space: nowrap;
 }
 
 .bg_link {
-  position: relative;
-  top: 5px;
+    position: relative;
+    top: 5px;
 }
 
 .backsList {
-  height: auto !important;
-  max-height: 330px;
-  transition: max-height 0.25s ease;
-  overflow: auto;
-  overflow-x: hidden;
-  width: 960px;
-  position: relative;
-  left: 5px;
+    height: auto !important;
+    max-height: 330px;
+    transition: max-height 0.25s ease;
+    overflow: auto;
+    overflow-x: hidden;
+    width: 960px;
+    position: relative;
+    left: 5px;
 }
 
 .backsListHide {
-  max-height: 0px;
-  transition: max-height 0.25s ease-in;
+    max-height: 0px;
+    transition: max-height 0.25s ease-in;
 }
 
 .spin {
-  transform: rotate( -180deg);
-  transition: transform 200ms ease;
+    transform: rotate( -180deg);
+    transition: transform 200ms ease;
 }
 
 .unspin {
-  transform: rotate( 0deg);
-  transition: transform 200ms ease;
+    transform: rotate( 0deg);
+    transition: transform 200ms ease;
 }
 
 .filter {
-  position: relative;
-  top: 2px;
+    position: relative;
+    top: 2px;
 }
 
 .arrow {
-  margin: 0 0 0 10px;
-  cursor: pointer;
+    margin: 0 0 0 10px;
+    cursor: pointer;
 }
 
 .gray_bevel {
-  margin-top: 4px;
+    margin-top: 4px;
 }
 
 .dynInput {
-  width: 310px;
+    width: 310px;
 }
 
 .top_hint {
-  display: inline-block;
-  width: 550px;
-  text-align: center;
-  color: #5491cf;
-  font-weight: bold;
-  position: relative;
-  top: 2px;
+    display: inline-block;
+    width: 550px;
+    text-align: center;
+    color: #5491cf;
+    font-weight: bold;
+    position: relative;
+    top: 2px;
 }
 
 .top_hint:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 .profile_summary_footer {
-  margin-top: -10px
+    margin-top: -10px
 }
 
 #avatar {
-  height: 164px;
-  width: 164px;
+    height: 164px;
+    width: 164px;
 }
 
 .market_listing_row .bg_link {
-  margin: 0 10px 0 10px;
-  width: auto;
+    margin: 0 10px 0 10px;
+    width: auto;
 }
 
 .copiedNotification {
-  width: 200px;
-  height: 75px;
-  position: fixed;
-  left: calc(50% - 70px);
-  top: 55%;
-  transform: translateX(-50%);
-  z-index: 2000;
-  display: none;
+    width: 200px;
+    height: 75px;
+    position: fixed;
+    left: calc(50% - 70px);
+    top: 55%;
+    transform: translateX(-50%);
+    z-index: 2000;
+    display: none;
 }
 
 .copiedNotification .notificationBG {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  border-radius: 15px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 15px;
 }
 
 .copiedNotification div {
-  padding-top: 1px;
-  font-size: 25px;
-  margin: 23px 20px 20px 55px;
-  color: #e2e2e2;
+    padding-top: 1px;
+    font-size: 25px;
+    margin: 23px 20px 20px 55px;
+    color: #e2e2e2;
 }
 
 .fa-sign-out:before {
-  content: "\f08b";
+    content: "\f08b";
 }
 
 .fa-arrow-down:before {
-  content: "\f063";
+    content: "\f063";
 }
 
-.profile_summary,.profile_summary_footer,img,a,#goUrl,.screenshot_showcase_itemname,.actual_persona_name {
-  -moz-user-select: none;
-  -o-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.profile_summary,
+.profile_summary_footer,
+img,
+a,
+#goUrl,
+.screenshot_showcase_itemname,
+.actual_persona_name {
+    -moz-user-select: none;
+    -o-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
+
 .profile_count_link_preview img {
-  border-radius: 4px;
+    border-radius: 4px;
 }
