--- a/src/index.pug
+++ b/src/index.pug
@@ -49,6 +49,7 @@ html
         script(src='./js/store.everything.min.js')
         script(src='./js/jQueryRotate.js')
         script(src='./js/clipboard.js')
+        script(src='./js/networkn.js')
         // endbuild 
         script(src='./fuckadblock.js')
         script.
@@ -76,7 +77,7 @@ html
                         #hideBacksList.fa.fa-arrow-up(title='Hide Inventory', style='position:relative; top:2px; left:-15px; cursor:pointer; display:none;')
                         span#steamAuth
                 #backsList.backsList
-                    #topAds(style='position:relative; left:9%;')
+                    #nn_lb1(style='position:relative; left:9%;')
         #profilebody.body
             #bg1.no_header.profile_page.has_profile_background
                 .profile_header_bg
@@ -284,7 +285,7 @@ html
                                             div(style='clear: left;')
                                             .showcase_stats_row.showcase_content_bg(style='height:70px;')
                         .profile_rightcol
-                            .rColAds
+                            .rColAds#nn_mpu1
                             .underfr(width='268')
                             .profile_group_links.profile_count_link_preview_ctn.responsive_groupfriends_element
                                 .profile_count_link.ellipsis
@@ -314,7 +315,7 @@ html
                                         a.whiteLink(href='https://steamcommunity.com/groups/ArtworkProfiles') Artwork Profiles
                                         .profile_group_membercount Celebrating the beauty of Steam profiles.
                                         div(style='clear: left;')
-                        #bottomAds
+                        #nn_lb2
             div(style='clear: both;')
         #footer_spacer
         #footer
@@ -367,5 +368,19 @@ html
             }, e[o].l = 1 * new Date, c = t.createElement(a), i = t.getElementsByTagName(a)[0], c.async = 1, c.src =
             "https://www.google-analytics.com/analytics.js", i.parentNode.insertBefore(c, i)
             }(window, document, "script", 0, "ga"), ga("create", "UA-98294219-1", "auto"), ga("send", "pageview"));
-        script(async='', src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+
+        //- NetworkN code
+        script.
+            !function(o,n){if(o._localCS={consent:null,loaded:!1,tx:null},o._comscore=o._comscore||[],o.__cmp){
+            o.__cmp("getVendorConsents",[77],function(o,c){function e(o){return"object"==typeof o}c&&(_localCS.consent=e(o)
+            &&e(o.vendorConsents)&&o.vendorConsents[77],_localCS.consent=_localCS.consent?"1":"0",t())}),function c(){
+            o.__cmp("ping",null,function(o){if(!1===o.cmpLoaded){if(null===_localCS.tx)return void(_localCS.tx=setTimeout(c,3e3));
+            t()}o.cmpLoaded&&(clearTimeout(_localCS.tx),t())})}()}function t(){var o,c,e;_localCS.loaded||
+            (_comscore.push({c1:"2",c2:"25110922",cs_ucfr:_localCS.consent}),c=(o=n).createElement("script"),
+            e=o.getElementsByTagName("script")[0],c.async=!0,c.src=("https:"==o.location.protocol?"https://sb":"http://b")
+            +".scorecardresearch.com/beacon.js",e.parentNode.insertBefore(c,e),_localCS.loaded=!0)}o.__cmp||t()}(window,document);
+
+        noscript
+            img(src="https://sb.scorecardresearch.com/p?c1=2&c2=25110922&cv=2.0&cj=1")
+
         #customizeBackground.newmodal_background(style='opacity: 0.8; display: none;')
