Add cookies consent

--- a/src/index.pug
+++ b/src/index.pug
@@ -334,6 +334,7 @@ html
                     a(href='https://steamcommunity.com/id/theoddball')
                         | The Oddball
                     br
+                    a(style="cursor:pointer" onclick="window.__cmp('showConsentModal')") Manage Cookie Settings
         img#bgImgEl(style='display:none')
         #bgPreloader(style='display:none;')
         #copiedNotification.copiedNotification
@@ -382,5 +383,20 @@ html
 
         noscript
             img(src="https://sb.scorecardresearch.com/p?c1=2&c2=25110922&cv=2.0&cj=1")
+
+        //- NetworkN CMP Tool
+        script.
+            !function(e,a){if(function(e){"string"==typeof e&&(e=[e]);for(var n=0;n<e.length;n++)a.cookie=e[n]+
+            "=;max-age=-1;domain=."+a.domain+";path=/"}(["euconsent","eupubconsent","googlepersonalization"]),
+            !e.__cmp){e.__cmp=function(){(e.attachEvent||e.addEventListener)("message",function(a){e.__cmp.receiveMessage(a)}
+            ,!1),function n(){if(!e.frames.__cmpLocator)if(a.body){var o=a.createElement("iframe");o.style.display="none",
+            o.name="__cmpLocator",a.body.appendChild(o)}else setTimeout(n,5)}();var n=[],o=function(a,o,c){"ping"===a?c&&c({
+            gdprAppliesGlobally:!!(e.__cmp&&e.__cmp.config&&e.__cmp.config.storeConsentGlobally),cmpLoaded:!1}):
+            n.push({command:a,parameter:o,callback:c})};return o.commandQueue=n,o.receiveMessage=function(e){
+            var a=e&&e.data&&e.data.__cmpCall;a&&n.push({callId:a.callId,command:a.command,parameter:a.parameter,
+            event:e})},o.config=e.cmpConfig||{globalVendorListLocation:"https://cmp.network-n.com/vendorlist.json"},
+            o}();var n=a.createElement("script");n.async=!0,n.src="https://cmp.network-n.com/js/cmp.complete.bundle.js",
+            a.getElementsByTagName("head")[0].appendChild(n)}}(window,document);
+
 
         #customizeBackground.newmodal_background(style='opacity: 0.8; display: none;')
