Add privacy policy

--- a/src/index.pug
+++ b/src/index.pug
@@ -334,6 +334,8 @@ html
                     a(href='https://steamcommunity.com/id/theoddball')
                         | The Oddball
                     br
+                    a(style="cursor:pointer" href="/privacy_policy.pdf" target="_blank") Privacy Policy
+                    | &nbsp;&nbsp;
                     a(style="cursor:pointer" onclick="window.__cmp('showConsentModal')") Manage Cookie Settings
         img#bgImgEl(style='display:none')
         #bgPreloader(style='display:none;')
