Add download page

--- a/src/index.pug
+++ b/src/index.pug
@@ -28,7 +28,7 @@ html
         meta(name='twitter:url', content='https://steam.design/')
 
 
-        // build:css ./main.css 
+        // build:css ./main.css
         link(href='./css/motiva_sans.css', rel='stylesheet', type='text/css')
         link(href='./css/buttons.css', rel='stylesheet', type='text/css')
         link(href='./css/shared_global.css', rel='stylesheet', type='text/css')
@@ -39,8 +39,8 @@ html
         link(href='./css/font-awesome.css', rel='stylesheet', type='text/css')
         link(href='./css/social-likes_flat.css', rel='stylesheet', type='text/css')
         link(href='./css/slider.css', rel='stylesheet', type='text/css')
-        // endbuild 
-        // build:js ./main.js 
+        // endbuild
+        // build:js ./main.js
         script(src='./js/jquery.min.js')
         script(src='./js/jquery.smooth-scroll.min.js')
         script(src='./js/interact-1.2.9.min.js')
@@ -50,7 +50,7 @@ html
         script(src='./js/jQueryRotate.js')
         script(src='./js/clipboard.js')
         script(src='./js/networkn.js')
-        // endbuild 
+        // endbuild
         script(src='./fuckadblock.js')
         script.
             if (typeof module === 'object') {
@@ -168,7 +168,7 @@ html
                                                                             span Copy
                                                                         #shareWidth.commentthread_entry_quotebox(style='width:165px;margin:5px;')
                                                                             input#shareURL.dynInput.commentthread_textarea(type='text', size='500', onfocus='this.select()', readonly='', placeholder='Loading...')
-                                        a#saveAll.btn_green_white_innerfade.btn_medium.saveButton(style='left:6px; position:relative;')
+                                        a#saveAll.btn_green_white_innerfade.btn_medium.saveButton(style='left:6px; position:relative;' target="_blank")
                                             .saveButtonShadow
                                             span(style='color:#ffffff')
                                                 .fa.fa-check-circle
