--- a/src/css/download/main.css
+++ b/src/css/download/main.css
@@ -1,3 +1,30 @@
+html {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
 body {
-  background: rgba(18,21,26,.8);
+    background-image: url("./sapicrepeat.png");
+    color: white;
+    position: relative;
+    top: 25%;
+    font-family: Roboto;
+    text-align: center;
+}
+
+h3,
+h4 {
+    font-weight: 300;
+}
+
+.container {
+    padding: 1px 20px 40px 20px;
+    width: 600px;
+    background-color: rgb(18, 21, 26);
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 10px;
 }
