--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -1,3 +1,15 @@
+@import './motiva_sans.css'
+@import './buttons.styl'
+@import './shared_global.styl'
+@import './globalv2.styl'
+@import './modalContent.styl'
+@import './profilev2.styl'
+@import './economy.styl'
+@import './font-awesome.styl'
+// @import './social-likes_flat.styl'
+@import './slider.styl'
+@import './newui.styl'
+
 .content
     height auto !important
     overflow-x hidden
