--- a/src/css/profilev2.styl
+++ b/src/css/profilev2.styl
@@ -463,7 +463,7 @@ a.showcase_stat:hover .label {
     z-index: 1;
     background-color: #171717;
     opacity: .85;
-    filter: alpha(opacity=85);
+    // filter: alpha(opacity=85);
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=85)";
 }
 
