--- a/src/css/slider.styl
+++ b/src/css/slider.styl
@@ -39,7 +39,7 @@ input[type="range"]::-webkit-slider-thumb {
     background: -o-linear-gradient(left, #5491cf 0%, #447ccf 50%, #2d4a81 100%);
     background: -ms-linear-gradient(left, #5491cf 0%, #447ccf 50%, #2d4a81 100%);
     background: linear-gradient(to right, #5491cf 0%, #447ccf 50%, #2d4a81 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019', GradientType=1);
+    filter: "progid: DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019', GradientType=1)";
 }
 
 input[type="range"]::-webkit-slider-thumb:hover {
@@ -57,7 +57,7 @@ input[type="range"]::-webkit-slider-thumb:hover {
     background: -o-linear-gradient(left, #75c7cf 0%, #447ccf 50%, #437ecf 100%);
     background: -ms-linear-gradient(left, #75c7cf 0%, #447ccf 50%, #437ecf 100%);
     background: linear-gradient(to right, #75c7cf 0%, #447ccf 50%, #437ecf 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019', GradientType=1);
+    filter: "progid: DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019', GradientType=1)";
 }
 
 input[type="range"]:focus {
