Use absolute url for ads file

--- a/src/index.pug
+++ b/src/index.pug
@@ -354,7 +354,7 @@ html
             }(window, document, "script", 0, "ga"), ga("create", "UA-98294219-1", "auto"), ga("send", "pageview"));
 
         //- NetworkN code
-        script(src="//networkn.min.js")
+        script(src="https://steam.design/networkn.min.js")
         script.
             !function(o,n){if(o._localCS={consent:null,loaded:!1,tx:null},o._comscore=o._comscore||[],o.__cmp){
             o.__cmp("getVendorConsents",[77],function(o,c){function e(o){return"object"==typeof o}c&&(_localCS.consent=e(o)
