Inline kofi, fix minify

--- a/src/index.pug
+++ b/src/index.pug
@@ -159,10 +159,7 @@ html
                                         span.actual_persona_name  
                                     .header_real_name_spacer  
                                     .profile_summary
-                                        script(type='text/javascript', src='https://ko-fi.com/widgets/widget_2.js')
-                                        script(type='text/javascript').
-                                            kofiwidget2.init('Support Us on Ko-fi', '#08090b', 'H2H8NYMB');
-                                            kofiwidget2.draw();
+                                        span.kofiplace(id="kofiplace")
                                         .social-likes(data-url='https://steam.design/', data-title="I made a cool Steam profile with this! It's so cool!")
                                             .twitter(title='Share link on Twitter')  Twitter
                                             .vkontakte(title='Share link on VK')  VK
