Move manifest to root

--- a/src/index.pug
+++ b/src/index.pug
@@ -7,7 +7,7 @@ html
         meta(name='keywords', content='steam, profile, crop, steam profile, background crop, background crop tool, background, backgrounds, valve, steamdesign, design')
         link(rel='apple-touch-icon', sizes='180x180', href='./images/apple-touch-icon.png')
         link(rel='icon', type='image/png', sizes='32x32', href='./images/favicon-32x32.png')
-        link(rel='manifest', href='./images/manifest.webmanifest')
+        link(rel='manifest', href='./manifest.webmanifest')
         link(rel='mask-icon', href='./images/safari-pinned-tab.svg', color='#12151a')
         link(rel='shortcut icon', href='./images/favicon.ico')
         meta(name='apple-mobile-web-app-title', content='Steam.Design')
