Site load optimizations

--- a/src/css/economy.styl
+++ b/src/css/economy.styl
@@ -9,7 +9,7 @@
     width: 98px;
     height: 98px;
     background-color: #333333;
-    background-image: url('https://steamcommunity-a.akamaihd.net/public/images/economy/trade_itemholder.png');
+    // background-image: url('https://steamcommunity-a.akamaihd.net/public/images/economy/trade_itemholder.png');
     background-repeat: no-repeat;
     background-position: center top;
     float: left;
