--- a/src/css/newui.styl
+++ b/src/css/newui.styl
@@ -120,17 +120,43 @@
 .kofi-button
     height 21px
 
+.kofidescription
+    // position relative 
+    // bottom 7px
+    margin-top 4px
+    margin-left 5px
+
 .kofitext
-    position relative
-    bottom 7px
+    display flex
 
 .kofiimg
-    position relative
-    top 1px
+    // position relative
+    // top 1px
+    margin-top 4px
+    height 15px
+    width 22px
 
-.btn-container
+.kofi-btn-container 
+    display inline-block
+    white-space nowrap
+    min-width 160px
     margin-right 1em
     margin-left 1em
+    padding 0 12px
+    background #08090b
+    border-radius 7px
+    height 25px
+
+.social-likes .social-likes__widget
+    margin 0 5px 0 5px
+
+.profile_summary_social
+    display: flex
+
+.profile_summary_social .social-likes
+    margin 0
+    min-height: 20px
+
 
 .profile_count_link
     margin-bottom 0 !important
