--- a/src/css/profilev2.styl
+++ b/src/css/profilev2.styl
@@ -4,7 +4,7 @@ div.profile_page {
 }
 
 div.profile_page {
-    background-image: url('https://steamcommunity-a.akamaihd.net/public/images/profile/profile_bg.jpg');
+    // background-image: url('https://steamcommunity-a.akamaihd.net/public/images/profile/profile_bg.jpg');
     background-repeat: repeat-x;
     background-color: #262627;
 }
